alignment issue fixed

--- a/apps/web-giddh/src/app/ledger/components/updateLedgerDiscount/updateLedgerDiscount.component.scss
+++ b/apps/web-giddh/src/app/ledger/components/updateLedgerDiscount/updateLedgerDiscount.component.scss
@@ -35,7 +35,7 @@
 }
 .percent-wrapper{
     .form-control{
-        width: 100px;
+        width: 110px;
         padding-right: 20px !important;
     }
    .fa-percent{
@@ -43,6 +43,11 @@
        right: 6px;
        color: $gray;
    }
+}
+.value-box{
+    .form-control{
+        width: 110px;
+    }
 }
 .discount-list{
    list-style: none;
